<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item-->
<!--        android:id="@+id/tempatAman"-->
<!--        android:icon="@drawable/ic_place"-->
<!--        android:title="@string/safePlace"-->
<!--        app:showAsAction="always"-->
<!--        />-->

<!--    <item-->
<!--        android:id="@+id/sensorGetar"-->
<!--        android:icon="@drawable/ic_sensor"-->
<!--        android:title="@string/shakeSensor"-->
<!--        app:showAsAction="always"-->
<!--        />-->

<!--    <item-->
<!--        android:id="@+id/kompas"-->
<!--        android:icon="@drawable/ic_compas"-->
<!--        android:title="@string/compass"-->
<!--        app:showAsAction="always"-->
<!--        />-->

    <item
        android:id="@+id/informasi"
        android:icon="@drawable/ic_appinfo"
        android:title="@string/appInfo"
        />

    <item
        android:id="@+id/bahasa"
        android:title="@string/language"
        />
    <item
        android:id="@+id/pengaturan"
        android:title="@string/settings"
        />
<!--    <item-->
<!--        android:id="@+id/tes"-->
<!--        android:title="tes"-->
<!--        />-->

</menu>