<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:background="@drawable/compassbg"
    tools:context=".CompassActivity">

    <ImageView
        android:id="@+id/main_image_dial"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/compass_dial"
        android:src="@drawable/dial" />

    <ImageView
        android:id="@+id/main_image_hands"
        android:layout_width="20dp"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/compass_hands"
        android:scaleType="fitXY"
        android:src="@drawable/hands" />

    <TextView
        android:id="@+id/compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48sp"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="28sp"
        android:text="@string/compass"/>

    <TextView
        android:id="@+id/sotw_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/compass"
        android:textColor="#3F51B5"
        android:layout_centerHorizontal="true"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/direction"/>

    <TextView
        android:id="@+id/sotw_label"
        android:layout_marginLeft="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_below="@+id/sotw_text"/>

</RelativeLayout>
